--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start:frontend": "react-scripts start",
-    "build": "react-scripts build",
+    "start:frontend": "react-scripts --max-old-space-size=16384 start",
+    "build": "react-scripts --max-old-space-size=16384 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
