--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:backend": "nodemon index.js",
+    "start:backend": "nodemon --max-old-space-size=16384 index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
