--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -25,8 +25,10 @@ pipeline {
         stage('Build') {
             steps {
                 // sh 'cd client/'
-                sh 'npm install'
-                sh 'tar czf Node.tar.gz client server docker-compose.yml'
+                dir('client') {
+                    sh 'npm install'
+                    sh 'tar czf Node.tar.gz client server docker-compose.yml'
+                }
             }
         }
 
