Client Dockerfile added

--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -25,7 +25,7 @@ pipeline {
         stage('Build') {
             steps {
                 // sh 'cd client/'
-                dir('client') {
+                dir('./client') {
                     sh 'npm install'
                     sh 'tar czf Node.tar.gz client server docker-compose.yml'
                 }
