Client Dockerfile added

--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -18,8 +18,11 @@ pipeline {
     stages {
         stage('Git Pull') {
             steps {
-                git url: 'https://github.com/sathvik-bhat/Tinder.git', branch: 'main',
-                credentialsId: 'Credential_Git'
+                // git url: 'https://github.com/sathvik-bhat/Tinder.git', branch: 'main',
+                // credentialsId: 'Credential_Git'
+                checkout scmGit(branches: [[name: '*/main']], 
+                extensions: [[$class: 'RelativeTargetDirectory', relativeTargetDir: 'client']], 
+                userRemoteConfigs: [[credentialsId: 'github', url: 'https://github.com/sathvik-bhat/Tinder']])
             }
         }
         stage('Build') {
