--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -18,11 +18,11 @@ pipeline {
     stages {
         stage('Git Pull') {
             steps {
-                git url: 'https://github.com/sathvik-bhat/Tinder.git', branch: 'main',
-                credentialsId: 'Credential_Git'
-                // dir('subDir') {
-                //     checkout scm
-                // }
+                // git url: 'https://github.com/sathvik-bhat/Tinder.git', branch: 'main',
+                // credentialsId: 'Credential_Git'
+                dir('client') {
+                    checkout scm
+                }
             }
         }
         stage('Build') {
