Client Dockerfile added

--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -18,19 +18,18 @@ pipeline {
     stages {
         stage('Git Pull') {
             steps {
-                // git url: 'https://github.com/sathvik-bhat/Tinder.git', branch: 'main',
-                // credentialsId: 'Credential_Git'
-                dir('client') {
-                    checkout scm
-                }
+                git url: 'https://github.com/sathvik-bhat/Tinder.git', branch: 'main',
+                credentialsId: 'Credential_Git'
+                // dir('subDir') {
+                //     checkout scm
+                // }
             }
         }
         stage('Build') {
             steps {
-                dir('client') {    
-                    sh 'npm install'
-                    sh 'tar czf Node.tar.gz client server docker-compose.yml'
-                }
+                sh 'cd client'
+                sh 'npm install'
+                sh 'tar czf Node.tar.gz client server docker-compose.yml'
             }
         }
 
