Client Dockerfile added

--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -27,6 +27,11 @@ pipeline {
         }
         stage('Build') {
             steps {
+                sh "pwd"
+                    dir('client') {
+                    sh "pwd"
+                }
+                
                 sh 'cd client'
                 sh 'npm install'
                 sh 'tar czf Node.tar.gz client server docker-compose.yml'
