Client Dockerfile added

--- a/client/Jenkinsfile
+++ b/client/Jenkinsfile
@@ -31,10 +31,10 @@ pipeline {
                     dir('client') {
                     sh "pwd"
                 }
-                
-                sh 'cd client'
-                sh 'npm install'
-                sh 'tar czf Node.tar.gz client server docker-compose.yml'
+
+                // sh 'cd client'
+                // sh 'npm install'
+                // sh 'tar czf Node.tar.gz client server docker-compose.yml'
             }
         }
 
