--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-# URI = "mongodb+srv://sathvikibhat:tmPfLllBWCmRIrEG@cluster0.5ujsgy9.mongodb.net/?retryWrites=true&w=majority"
+URI = "mongodb+srv://sathvikibhat:tmPfLllBWCmRIrEG@cluster0.5ujsgy9.mongodb.net/?retryWrites=true&w=majority"
 # URI = "mongodb://localhost:27017"
 
 # docker run -d \
